@@ -1608,6 +1608,13 @@ Details    : Introduce new lu_context functions that are needed on the client
 	     side, where some system threads (ptlrpcd) are shared by multiple
 	     modules, and so cannot be stopped during module shutdown.
 
+Severity   : normal
+Bugzilla   : 16450
+Description: Add start and stop methods to lu_device_type_operations.
+Details    : Introduce two new methods in lu_device_type_operations, that are 
+        invoked  when first instance of a given type is created and last one 
+        is destroyed respectively. This is need by CLIO.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
